--- a/testblog/Gemfile
+++ b/testblog/Gemfile
@@ -35,7 +35,7 @@ gem 'jbuilder', '~> 2.5'
 
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
-
+gem 'haml-rails'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
@@ -44,6 +44,7 @@ group :development, :test do
   gem 'faker'
   # Use sqlite3 as the database for Active Record
   gem 'sqlite3'
+
 end
 
 group :development do
